fixing up some files

--- a/app/views/welcome/index.html
+++ b/app/views/welcome/index.html
@@ -48,4 +48,21 @@
     <div class="jumbotron">
       <h1 class="display-4">City Care Pack</h1>
     </div>
+
+    <p>
+      This is City Care Pack.
+    </p>
+    <p>
+      It is a subscription box service that caters to the city community.
+      This box is filled with products from local vendors.  The box is based on users interests.
+    </p>
+    <ul>
+      <li>Sports & Recreation</li>
+      <li>Style & Accessories</li>
+      <li>Health & Wellness</li>
+      <li>Pop Culture & Arts</li>
+    </ul>
+    <p>
+      Portion of the sales go to local non profits
+    </p>
 </html>
